--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "iview": "^2.9.2",
     "lodash": "^4.17.5",
     "vue": "^2.5.2",
