--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
     "compilerOptions": {
-      "jsx": "preserve",
-      "jsxFactory": "h",
+      "declaration": false,
       "allowSyntheticDefaultImports": true,
       "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
       "sourceMap": true,
+      "target": "es5",
       "module": "es2015",
       "moduleResolution": "node",
-      "target": "es5"
+      "lib": [
+        "es2017",
+        "dom"
+      ]
     }
 }
