--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "emitDecoratorMetadata": true,
       "sourceMap": true,
       "target": "es5",
-      "module": "es2015",
+      "module": "commonjs",
       "moduleResolution": "node",
       "lib": [
         "es2017",
